added HELLO to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>hopper-plan</title>
   </head>
+  HELLO
   <body>
     <noscript>
       <strong>We're sorry but hopper-plan doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
